style: fix footer z-index

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -11,6 +11,7 @@
 
 .footer {
     flex-shrink: 0;
+    z-index: 10;
 }
 
 .clock {
